# VaultArchive

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  varc
docs/: API_REFERENCE.md  USER_GUIDE.md  varc.1
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/: main.cpp
src/gui/: AboutDialog.cpp  AboutDialog.ui  CreateArchiveDialog.cpp  CreateArchiveDialog.h  CreateArchiveDialog.ui  ExtractDialog.cpp  ExtractDialog.h  ExtractDialog.ui  MainWindow.cpp  MainWindow.h  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  main.cpp  mainwindow.ui
src/include/: Archive.hpp  CompressionEngine.hpp  CryptoEngine.hpp  VarcEntry.hpp  VarcHeader.hpp
src/lib/: Archive.cpp  CompressionEngine.cpp  CryptoEngine.cpp  Header.cpp  VarcEntry.cpp
